--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.3.4",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "react-tsparticles": "^2.8.0",
     "react-typewriter-effect": "^1.1.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
@@ -30,10 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
